--- a/geospatial/planet/Dockerfile
+++ b/geospatial/planet/Dockerfile
@@ -10,20 +10,12 @@ COPY environment.yml /home/jovyan/
 RUN mamba env create -f /home/jovyan/environment.yml
 # using ~/.bash_profile instead of ~/.bashrc for non-interactive tty (-it) containers
 RUN echo ". /opt/conda/etc/profile.d/conda.sh" >> /home/jovyan/.bash_profile && \
-    echo "conda activate geospatial" >> /home/jovyan/.bash_profile
-RUN ipython kernel install --name "geospatial" --user     
+    echo "conda activate planet" >> /home/jovyan/.bash_profile
+RUN ipython kernel install --name "planet" --user     
 RUN source /home/jovyan/.bash_profile
 
 # Install JupyterLab widget extensions
-RUN pip install jupyterlab-geojson sidecar
 RUN sudo chown -R 1000:100 /opt/conda/share
-RUN jupyter labextension install \
-    ipyvolume \
-    itkwidgets \    
-    jupyterlab_iframe \ 
-    jupyter-leaflet \
-    jupyter-threejs \
- && npm cache clean --force
 
 RUN jupyter lab build
 
