--- a/4.0.1/Dockerfile
+++ b/4.0.1/Dockerfile
@@ -1,4 +1,4 @@
-FROM jupyter/datascience-notebook:latest
+FROM jupyter/datascience-notebook:lab-4.0.1
 
 USER root
 
@@ -44,9 +44,6 @@ RUN wget https://download3.rstudio.org/ubuntu-18.04/x86_64/shiny-server-1.5.21.1
     gdebi -n shiny-server-1.5.21.1012-amd64.deb && \
     rm shiny-server-1.5.21.1012-amd64.deb && \
     apt-get clean && rm -rf /var/lib/apt/lists/*
-
-# Trying a fix for RStudio proxy URI problem in VICE
-COPY jupyter_notebook_config.py /etc/jupyter/
 
 USER jovyan
 WORKDIR /home/jovyan
