--- a/latest/Dockerfile
+++ b/latest/Dockerfile
@@ -50,6 +50,14 @@ RUN apt-get update && apt-get upgrade -y
 # Trying a fix for RStudio proxy URI problem in VICE
 COPY jupyter_notebook_config.py /etc/jupyter/
 
+# install git-credential-manager 
+RUN wget https://github.com/git-ecosystem/git-credential-manager/releases/download/v2.5.0/gcm-linux_amd64.2.5.0.deb
+
+RUN dpkg -i gcm-linux_amd64.2.5.0.deb
+
+# set the ENV for the credential type
+ENV GCM_CREDENTIAL_STORE=cache
+
 USER jovyan
 WORKDIR /home/jovyan
 
