--- a/latest/jupyter_notebook_config.json
+++ b/latest/jupyter_notebook_config.json
@@ -1,11 +1,12 @@
 {
   "ServerApp": {
-    "allow_origin": "*",
-    "trust_xheaders": true,
     "token": "",
     "password": "",
-    "jpserver_extensions": {
-      "jupyterlab": true
-    }
+    "open_browser": false,
+    "ip": "0.0.0.0",
+    "port": 8888,
+    "allow_origin": "*",
+    "allow_unauthenticated_access": true,
+    "disable_check_xsrf": true
   }
 }
