changes to Dockerfile

--- a/biosci/Dockerfile
+++ b/biosci/Dockerfile
@@ -7,7 +7,7 @@ RUN apt update && \
     apt install -y lsb-release apt-transport-https curl libfreetype6-dev pkg-config libx11-dev gcc less software-properties-common apt-utils glances htop nano 
 
 # Install Go
-RUN wget -q -c https://dl.google.com/go/go1.20.5.linux-amd64.tar.gz -O - | tar -xz -C /usr/local
+RUN wget -q -c https://dl.google.com/go/go1.21.5.linux-amd64.tar.gz -O - | tar -xz -C /usr/local
 ENV PATH=$PATH:/usr/local/go/bin 
 
 # Install GoCommands
@@ -25,7 +25,7 @@ RUN apt update && \
     rm -rf /var/lib/apt/lists/*
     
 ARG LOCAL_USER=jovyan
-ARG PRIV_CMDS='/bin/ch*,/bin/cat,/bin/gunzip,/bin/tar,/bin/mkdir,/bin/ps,/bin/mv,/bin/cp,/usr/bin/apt*,/usr/bin/pip*,/bin/yum',/opt
+ARG PRIV_CMDS='/bin/ch*,/bin/cat,/bin/gunzip,/bin/tar,/bin/mkdir,/bin/ps,/bin/mv,/bin/cp,/usr/bin/apt*,/usr/bin/pip*,/bin/yum,/bin/snap,/bin/curl,/bin/tee,/opt'
 
 RUN usermod -aG sudo jovyan && \
     echo "$LOCAL_USER ALL=NOPASSWD: $PRIV_CMDS" >> /etc/sudoers
@@ -34,15 +34,15 @@ RUN usermod -aG jovyan jovyan
 
 # Install RStudio
 RUN apt update && apt install --yes gdebi-core && \
-    wget https://download2.rstudio.org/server/jammy/amd64/rstudio-server-2024.04.1-748-amd64.deb && \
-    gdebi -n rstudio-server-2024.04.1-748-amd64.deb && \
-    rm rstudio-server-2024.04.1-748-amd64.deb && \
+    wget https://download2.rstudio.org/server/jammy/amd64/rstudio-server-2022.12.0-353-amd64.deb && \
+    gdebi -n rstudio-server-2022.12.0-353-amd64.deb && \
+    rm rstudio-server-2022.12.0-353-amd64.deb && \
     apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Install Shiny Server
-RUN wget https://download3.rstudio.org/ubuntu-18.04/x86_64/shiny-server-1.5.22.1017-amd64.deb && \
-    gdebi -n shiny-server-1.5.22.1017-amd64.deb && \
-    rm shiny-server-1.5.22.1017-amd64.deb && \
+RUN wget https://download3.rstudio.org/ubuntu-18.04/x86_64/shiny-server-1.5.20.1002-amd64.deb && \
+    gdebi -n shiny-server-1.5.20.1002-amd64.deb && \
+    rm shiny-server-1.5.20.1002-amd64.deb && \
     apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # install git-credential-manager 
